--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #title {
 	width: 600px;
 	height: 150px;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_title.png');
+	background-image:url('penguin_pngs/penguin_title.png');
 }
 
 .penguin1:hover {
