--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .penguin1:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_1_hover.png');
+	background-image:url('penguin_pngs/mound_1_hover.png');
 	cursor: pointer;
 }
 
@@ -23,15 +23,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_1.png');
+	background-image:url('penguin_pngs/mound_1.png');
 }
 
 .penguin1:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_1.png')
+	background-image:url('penguin_pngs/penguin_1.png')
 }
 
 .penguin2:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_2_hover.png');
+	background-image:url('penguin_pngs/mound_2_hover.png');
 	cursor: pointer;
 }
 
@@ -39,15 +39,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_2.png');
+	background-image:url('penguin_pngs/mound_2.png');
 }
 
 .penguin2:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_2.png')
+	background-image:url('penguin_pngs/penguin_2.png')
 }
 
 .penguin3:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_3_hover.png');
+	background-image:url('penguin_pngs/mound_3_hover.png');
 	cursor: pointer;
 }
 
@@ -55,15 +55,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_3.png');
+	background-image:url('penguin_pngs/mound_3.png');
 }
 
 .penguin3:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_3.png')
+	background-image:url('penguin_pngs/penguin_3.png')
 }
 
 .penguin4:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_4_hover.png');
+	background-image:url('penguin_pngs/mound_4_hover.png');
 	cursor: pointer;
 }
 
@@ -71,15 +71,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_4.png');
+	background-image:url('penguin_pngs/mound_4.png');
 }
 
 .penguin4:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_4.png')
+	background-image:url('penguin_pngs/penguin_4.png')
 }
 
 .penguin5:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_5_hover.png');
+	background-image:url('penguin_pngs/mound_5_hover.png');
 	cursor: pointer;
 }
 
@@ -87,15 +87,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_5.png');
+	background-image:url('penguin_pngs/mound_5.png');
 }
 
 .penguin5:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_5.png')
+	background-image:url('penguin_pngs/penguin_5.png')
 }
 
 .penguin6:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_6_hover.png');
+	background-image:url('penguin_pngs/mound_6_hover.png');
 	cursor: pointer;
 }
 
@@ -103,15 +103,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_6.png');
+	background-image:url('penguin_pngs/mound_6.png');
 }
 
 .penguin6:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_6.png')
+	background-image:url('penguin_pngs/penguin_6.png')
 }
 
 .penguin7:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_7_hover.png');
+	background-image:url('penguin_pngs/mound_7_hover.png');
 	cursor: pointer;
 }
 
@@ -119,15 +119,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_7.png');
+	background-image:url('penguin_pngs/mound_7.png');
 }
 
 .penguin7:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/yeti.png')
+	background-image:url('penguin_pngs/yeti.png')
 }
 
 .penguin8:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_8_hover.png');
+	background-image:url('penguin_pngs/mound_8_hover.png');
 	cursor: pointer;
 }
 
@@ -135,15 +135,15 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_8.png');
+	background-image:url('penguin_pngs/mound_8.png');
 }
 
 .penguin8:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_8.png')
+	background-image:url('penguin_pngs/penguin_8.png')
 }
 
 .yeti:hover {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_9_hover.png');
+	background-image:url('penguin_pngs/mound_9_hover.png');
 	cursor: pointer;
 }
 
@@ -151,9 +151,9 @@ body {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/mound_9.png');
+	background-image:url('penguin_pngs/mound_9.png');
 }
 
 .yeti:active {
-	background-image:url('C:/Users/balle/Desktop/! School/! CODING/Semester 1/CSSProject3/penguin_pngs/penguin_7.png');
+	background-image:url('penguin_pngs/penguin_7.png');
 }
